tests/lean/field_resolution.lean.expected.out
field_resolution.lean:13:7: error: unknown identifier 'foo.c'
37
17
22
37
17
22
38
18
23
field_resolution.lean:39:12: error: invalid field notation, insufficient number of arguments for 'foo.add_a'
foo.add_a ⁇ foo.s : ℕ
field_resolution.lean:41:12: error: invalid field notation, insufficient number of arguments for 'foo.add_a'
foo.add_a ⁇ bar.s.to_foo : ℕ
field_resolution.lean:47:12: error: invalid field notation, insufficient number of arguments for 'foo.add_b_of_eq'
foo.add_b_of_eq ⁇ _ foo.s : ℕ
field_resolution.lean:52:12: error: type mismatch at application
  foo.blah foo.s
term
  foo.s
has type
  foo
but is expected to have type
  ℕ
Additional information:
field_resolution.lean:52:12: context: invalid field notation, function 'foo.blah' does not have explicit argument with type (foo ...)
field_resolution.lean:53:12: error: type mismatch at application
  foo.blah bar.s.to_foo
term
  bar.s.to_foo
has type
  foo
but is expected to have type
  ℕ
Additional information:
field_resolution.lean:53:12: context: invalid field notation, function 'foo.blah' does not have explicit argument with type (foo ...)
s.f : 37 = 0
λ {_x : ℕ}, s.f : ∀ {_x : ℕ}, _x = 0
field_resolution.lean:106:23: error: invalid field notation, insufficient number of arguments for 'function.apply'
λ (x : ℕ), function.apply ⁇ (λ (_x : ℕ), _x + x) : ℕ → ℕ
